<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/loginParent"
    android:orientation="vertical"
    android:id="@+id/drawer_layout"
    tools:context=".DashBoard.DashBoardActivity">

    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <RelativeLayout
            style="@style/parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                style="@style/parent"
                android:layout_weight="3"
                android:background="@drawable/login_shape_bk"
                android:orientation="vertical">

                <ImageView
                    android:layout_height="300dp"
                    android:layout_width="match_parent"
                    android:background="@drawable/ic_login_bk"
                    android:contentDescription="login background" />

            </LinearLayout>

    </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imageView2"
                    android:layout_gravity="right"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:onClick="ManageAccount"
                    android:layout_marginTop="2dp"
                    app:civ_border_color="#FF000000"
                    app:civ_border_width="0dp"
                    android:src="@drawable/anh"/>

                <TextView
                    android:id="@+id/txtCovid19"
                    android:layout_marginLeft="10dp"
                    android:text="@string/covid19"
                    android:textSize="25sp"
                    style="@style/headerText1"
                    app:layout_constraintBottom_toTopOf="@+id/txtTitle"
                    app:layout_constraintEnd_toStartOf="@+id/imageView2"
                    />
                <TextView
                    android:layout_marginTop="10dp"
                    android:id="@+id/txtTitle"
                    style="@style/headerText1"
                    android:layout_marginStart="10dp"
                    android:text="@string/title"
                    android:textSize="20sp"
                    app:layout_constraintTop_toBottomOf="@+id/txtCovid19" />

                <TextView
                    android:id="@+id/txtTitle2"
                    style="@style/headerText1"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/title2"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:layout_margin="5dp"
                    android:layout_gravity="center"
                    android:padding="5dp">

                    <Button
                        android:gravity="center"
                        android:onClick="ChatWithBot"
                        android:id="@+id/btnChat"
                        android:layout_width="125dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/call_button"
                        android:drawableLeft="@drawable/ic_message_circle"
                        android:drawablePadding="4dp"
                        android:paddingLeft="10dp"
                        android:text="Chat now"
                        android:textAllCaps="false"
                        style="@style/headerTextPrimary"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintVertical_bias="0.0"
                        tools:ignore="OnClick" />

                </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/symptoms"
                        android:textSize="20sp"
                        style="@style/headerText2"
                        />
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/symptoms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/prevention"
                    style="@style/headerText2"
                    android:textSize="20sp" />
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/Prevention"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Button
                    android:onClick="statistic"
                    android:id="@+id/start"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="20dp"
                    style="@style/loginButton"
                    android:drawableRight="@drawable/ic_arrow_forward_black_24dp"
                    android:includeFontPadding="false"
                    android:text="@string/see_statistics"
                    android:textAlignment="viewStart"
                    android:textAllCaps="false"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.477"
                    app:layout_constraintStart_toStartOf="parent">

                </Button>
            </LinearLayout>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>